SERVER-42219 Make sure oplog buffer is empty when primary exits drain mode.